# directory_opus_firy_plugin

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  dllmain.cpp  firyopus.cpp  firyopus.hpp  openfiry.sln  openfiry.vcxproj  opusoptions.cpp  opusoptions.hpp  readme.md  safecontainer.hpp  stdafx.cpp  stdafx.h
.github/workflows/: build-release.yml
